[gd_scene load_steps=25 format=2]

[ext_resource path="res://pck/assets/common/btn-exit.png" type="Texture" id=1]
[ext_resource path="res://pck/assets/menu/bg-3.jpg" type="Texture" id=2]
[ext_resource path="res://pck/assets/common/panel-1.png" type="Texture" id=3]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=4]
[ext_resource path="res://pck/scenes/profile_setting.gd" type="Script" id=5]
[ext_resource path="res://pck/assets/common/profiles/1.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://pck/assets/common/profiles/6.png" type="Texture" id=8]
[ext_resource path="res://pck/assets/common/profiles/11.png" type="Texture" id=9]
[ext_resource path="res://pck/assets/common/profiles/4.png" type="Texture" id=10]
[ext_resource path="res://pck/assets/common/profiles/3.png" type="Texture" id=11]
[ext_resource path="res://pck/assets/common/profiles/8.png" type="Texture" id=12]
[ext_resource path="res://pck/assets/common/profiles/12.png" type="Texture" id=13]
[ext_resource path="res://pck/assets/common/profiles/9.png" type="Texture" id=14]
[ext_resource path="res://pck/assets/common/profiles/2.png" type="Texture" id=15]
[ext_resource path="res://pck/assets/common/profiles/10.png" type="Texture" id=16]
[ext_resource path="res://pck/assets/common/profiles/5.png" type="Texture" id=17]
[ext_resource path="res://pck/assets/common/profiles/7.png" type="Texture" id=18]
[ext_resource path="res://pck/prefabs/AlertBox.tscn" type="PackedScene" id=20]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, -10, 200, 210 )
margin_left = 60.0
margin_right = 60.0
margin_top = 80.0
margin_bottom = 60.0

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StreamTexture" id=4]
flags = 4

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.301961, 0.301961, 0.301961, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="root" type="Node2D"]
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 1000, 450 )
texture = ExtResource( 2 )

[node name="Exit" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 1 )
script = ExtResource( 4 )

[node name="ProfilePanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 240.0
margin_top = 20.0
margin_right = 980.0
margin_bottom = 880.0
rect_pivot_offset = Vector2( -1160, -120 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="ProfilePanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -410.0
margin_right = 350.0
margin_bottom = -290.0
custom_fonts/font = SubResource( 5 )
text = "Profile ပုံေျပာင္းရန္"
align = 1
valign = 1

[node name="Profile" type="Sprite" parent="ProfilePanel"]
position = Vector2( 360, 230 )
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 4 )

[node name="1" type="TextureButton" parent="ProfilePanel"]
margin_left = 65.0
margin_top = 364.0
margin_right = 185.0
margin_bottom = 484.0
texture_normal = ExtResource( 6 )
script = ExtResource( 4 )

[node name="2" type="TextureButton" parent="ProfilePanel"]
margin_left = 225.0
margin_top = 364.0
margin_right = 345.0
margin_bottom = 484.0
texture_normal = ExtResource( 15 )
script = ExtResource( 4 )

[node name="3" type="TextureButton" parent="ProfilePanel"]
margin_left = 65.0
margin_top = 524.0
margin_right = 185.0
margin_bottom = 644.0
texture_normal = ExtResource( 11 )
script = ExtResource( 4 )

[node name="4" type="TextureButton" parent="ProfilePanel"]
margin_left = 225.0
margin_top = 524.0
margin_right = 345.0
margin_bottom = 644.0
texture_normal = ExtResource( 10 )
script = ExtResource( 4 )

[node name="5" type="TextureButton" parent="ProfilePanel"]
margin_left = 65.0
margin_top = 684.0
margin_right = 185.0
margin_bottom = 804.0
texture_normal = ExtResource( 17 )
script = ExtResource( 4 )

[node name="6" type="TextureButton" parent="ProfilePanel"]
margin_left = 225.0
margin_top = 684.0
margin_right = 345.0
margin_bottom = 804.0
texture_normal = ExtResource( 8 )
script = ExtResource( 4 )

[node name="7" type="TextureButton" parent="ProfilePanel"]
margin_left = 385.0
margin_top = 364.0
margin_right = 505.0
margin_bottom = 484.0
texture_normal = ExtResource( 18 )
script = ExtResource( 4 )

[node name="8" type="TextureButton" parent="ProfilePanel"]
margin_left = 545.0
margin_top = 364.0
margin_right = 665.0
margin_bottom = 484.0
texture_normal = ExtResource( 12 )
script = ExtResource( 4 )

[node name="9" type="TextureButton" parent="ProfilePanel"]
margin_left = 385.0
margin_top = 524.0
margin_right = 505.0
margin_bottom = 644.0
texture_normal = ExtResource( 14 )
script = ExtResource( 4 )

[node name="10" type="TextureButton" parent="ProfilePanel"]
margin_left = 545.0
margin_top = 524.0
margin_right = 665.0
margin_bottom = 644.0
texture_normal = ExtResource( 16 )
script = ExtResource( 4 )

[node name="11" type="TextureButton" parent="ProfilePanel"]
margin_left = 385.0
margin_top = 684.0
margin_right = 505.0
margin_bottom = 804.0
texture_normal = ExtResource( 9 )
script = ExtResource( 4 )

[node name="12" type="TextureButton" parent="ProfilePanel"]
margin_left = 545.0
margin_top = 684.0
margin_right = 665.0
margin_bottom = 804.0
texture_normal = ExtResource( 13 )
script = ExtResource( 4 )

[node name="NicknamePanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 1020.0
margin_top = 20.0
margin_right = 1760.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( -1160, -120 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="NicknamePanel"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 40.0
margin_right = 350.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
text = "အမည္ေျပာင္းရန္"
align = 1
valign = 1

[node name="Nickname" type="LineEdit" parent="NicknamePanel"]
margin_left = 160.0
margin_top = 100.0
margin_right = 560.0
margin_bottom = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
placeholder_text = "ေဖာ္ျပလိုသည့္အမည္ "

[node name="ChangeNickname" type="TextureButton" parent="NicknamePanel"]
margin_left = 258.0
margin_top = 194.0
margin_right = 480.0
margin_bottom = 261.0
script = ExtResource( 4 )

[node name="PasswordPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 1020.0
margin_top = 300.0
margin_right = 1760.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -1160, -120 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="PasswordPanel"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 40.0
margin_right = 350.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 5 )
text = "Password ေျပာင္းရန္"
align = 1
valign = 1

[node name="PasswordOld" type="LineEdit" parent="PasswordPanel"]
margin_left = 160.0
margin_top = 120.0
margin_right = 560.0
margin_bottom = 200.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
secret = true
placeholder_text = "Password အေဟာင္း"

[node name="PasswordNew" type="LineEdit" parent="PasswordPanel"]
margin_left = 160.0
margin_top = 220.0
margin_right = 560.0
margin_bottom = 300.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
secret = true
placeholder_text = "Password အသစ္"

[node name="ChangePassword" type="TextureButton" parent="PasswordPanel"]
margin_left = 258.0
margin_top = 308.0
margin_right = 480.0
margin_bottom = 374.0
script = ExtResource( 4 )

[node name="Logout" type="TextureButton" parent="."]
margin_left = 1226.0
margin_top = 731.0
margin_right = 1558.0
margin_bottom = 832.0
expand = true
stretch_mode = 3
script = ExtResource( 4 )

[node name="AlertBox" parent="." instance=ExtResource( 20 )]
position = Vector2( 1000, 980 )
targetY = 840.0

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ProfilePanel/1" to="." method="_on_profile_select" binds= [ 1 ]]
[connection signal="pressed" from="ProfilePanel/2" to="." method="_on_profile_select" binds= [ 2 ]]
[connection signal="pressed" from="ProfilePanel/3" to="." method="_on_profile_select" binds= [ 3 ]]
[connection signal="pressed" from="ProfilePanel/4" to="." method="_on_profile_select" binds= [ 4 ]]
[connection signal="pressed" from="ProfilePanel/5" to="." method="_on_profile_select" binds= [ 5 ]]
[connection signal="pressed" from="ProfilePanel/6" to="." method="_on_profile_select" binds= [ 6 ]]
[connection signal="pressed" from="ProfilePanel/7" to="." method="_on_profile_select" binds= [ 7 ]]
[connection signal="pressed" from="ProfilePanel/8" to="." method="_on_profile_select" binds= [ 8 ]]
[connection signal="pressed" from="ProfilePanel/9" to="." method="_on_profile_select" binds= [ 9 ]]
[connection signal="pressed" from="ProfilePanel/10" to="." method="_on_profile_select" binds= [ 10 ]]
[connection signal="pressed" from="ProfilePanel/11" to="." method="_on_profile_select" binds= [ 11 ]]
[connection signal="pressed" from="ProfilePanel/12" to="." method="_on_profile_select" binds= [ 12 ]]
[connection signal="pressed" from="NicknamePanel/ChangeNickname" to="." method="_on_ChangeNickname_pressed"]
[connection signal="pressed" from="PasswordPanel/ChangePassword" to="." method="_on_ChangePassword_pressed"]
[connection signal="pressed" from="Logout" to="." method="_on_Logout_pressed"]
